--- a/stridle/src/main/AndroidManifest.xml
+++ b/stridle/src/main/AndroidManifest.xml
@@ -2,8 +2,7 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="rellikolbaid.stridle">
 
-    <!-- Require the step counter and step detector sensors.
-    -->
+    <!--  Require the step counter and step detector sensors. -->
     <uses-feature android:name="android.hardware.sensor.stepcounter" />
     <uses-feature android:name="android.hardware.sensor.stepdetector" />
 
@@ -13,13 +12,22 @@
         android:label="Stridle"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-
-        <activity android:name=".MainActivity"
-                  android:label="Stridle">
+        <activity
+            android:name=".MainActivity"
+            android:label="Stridle">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
+
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
+        </activity>
+        <activity
+            android:name=".SettingsActivity"
+            android:label="@string/title_activity_settings"
+            android:parentActivityName=".MainActivity">
+            <meta-data
+                android:name="android.support.PARENT_ACTIVITY"
+                android:value="rellikolbaid.stridle.MainActivity" />
         </activity>
     </application>
 
