starting over on settings page. planning to build it from the ground up

--- a/stridle/src/main/AndroidManifest.xml
+++ b/stridle/src/main/AndroidManifest.xml
@@ -2,7 +2,7 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="rellikolbaid.stridle">
 
-    <!--  Require the step counter and step detector sensors. -->
+    <!-- Require the step counter and step detector sensors. -->
     <uses-feature android:name="android.hardware.sensor.stepcounter" />
     <uses-feature android:name="android.hardware.sensor.stepdetector" />
 
@@ -22,6 +22,7 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
+        <activity android:name=".SettingsActivity"></activity>
     </application>
 
 </manifest>
