--- a/stridle/src/main/AndroidManifest.xml
+++ b/stridle/src/main/AndroidManifest.xml
@@ -22,7 +22,9 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-        <activity android:name=".SettingsActivity"></activity>
+        <activity android:name=".SettingsActivity" />
+        <activity android:name=".StatsActivity" />
+        <activity android:name=".UpgradesActivity"></activity>
     </application>
 
 </manifest>
